--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li 
             {{if id}} data-next="${id}" {{/if}}
             {{if resultId}} data-result="${resultId}" {{/if}}
-            >${answer}</li>
+            ><button class="answer-btn">${answer}</button></li>
     </script>
 
     <script id="quiz-template" type="text/x-jQuery-tmpl">
@@ -62,6 +62,6 @@
         <div id="results" class="fade"></div>
     </div>
     <div id="animation"></div>
-    <div id="water"></div>
+    <div id="water" data-water-level="1"></div>
 </body>
 </html>
