--- a/index.html
+++ b/index.html
@@ -78,6 +78,23 @@
         <div id="results" class="fade"></div>
     </div>
     <div id="animation"></div>
-    <div id="water" data-water-level="0"></div>
+    <div id="water" data-water-level="0">
+         <div id="bubbles" data-bubble-height="0">
+            <div class="bubble x1"></div>
+            <div class="bubble x2"></div>
+            <div class="bubble x3"></div>
+            <div class="bubble x4"></div>
+            <div class="bubble x5"></div>
+            <div class="bubble x6"></div>
+            <div class="bubble x7"></div>
+            <div class="bubble x8"></div>
+            <div class="bubble x9"></div>
+            <div class="bubble x10"></div>
+            <div class="bubble x11"></div>
+            <div class="bubble x12"></div>
+            <div class="bubble x13"></div>
+            <div class="bubble x14"></div>
+        </div>
+    </div>
 </body>
 </html>
