--- a/index.html
+++ b/index.html
@@ -79,6 +79,32 @@
     </div>
     <div id="animation"></div>
     <div id="water" data-water-level="0">
+        <div class="sunholder">
+        <div class="sun"></div>
+        <div class="raybase ray1" data-raybase-position="0"><div class="ray"></div></div>
+        <div class="raybase ray2" data-raybase-position="0"><div class="ray"></div></div>
+        <div class="raybase ray3" data-raybase-position="0"><div class="ray"></div></div>
+        <div class="raybase ray4" data-raybase-position="0"><div class="ray"></div></div>
+        <div class="raybase ray5" data-raybase-position="0"><div class="ray"></div></div>
+        <div class="raybase ray6" data-raybase-position="0"><div class="ray"></div></div>
+        <div class="raybase ray7" data-raybase-position="0"><div class="ray"></div></div>
+        <div class="raybase ray8" data-raybase-position="0"><div class="ray"></div></div>
+        <div class="raybase ray9" data-raybase-position="0"><div class="ray"></div></div>
+        <div class="raybase ray10" data-raybase-position="0"><div class="ray"></div></div>
+        <div class="raybase ray11" data-raybase-position="0"><div class="ray"></div></div>
+        <div class="raybase ray12" data-raybase-position="0"><div class="ray"></div></div>
+        <div class="raybase ray13" data-raybase-position="0"><div class="ray"></div></div>
+        <div class="raybase ray14" data-raybase-position="0"><div class="ray"></div></div>
+        <div class="raybase ray15" data-raybase-position="0"><div class="ray"></div></div>
+        <div class="raybase ray16" data-raybase-position="0"><div class="ray"></div></div>
+        <div class="raybase ray17" data-raybase-position="0"><div class="ray"></div></div>
+        <div class="raybase ray18" data-raybase-position="0"><div class="ray"></div></div>
+        <div class="raybase ray19" data-raybase-position="0"><div class="ray"></div></div>
+        <div class="raybase ray20" data-raybase-position="0"><div class="ray"></div></div>
+        <div class="raybase ray21" data-raybase-position="0"><div class="ray"></div></div>
+        <div class="raybase ray23" data-raybase-position="0"><div class="ray"></div></div>
+        <div class="raybase ray24" data-raybase-position="0"><div class="ray"></div></div>
+        </div>
          <div id="bubbles" data-bubble-height="0">
             <div class="bubble x1"></div>
             <div class="bubble x2"></div>
