updated logic and styling

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="question">${text}</div>
         <ul id="options"></ul>
 
-        <div class="progress">Step <span class="progress-current">${step}</span> of <span class="progress-total">?</span></div>
+        <div class="progress">Step <span class="progress-current">${step}</span></div>
     </script>
 
     <script src="./js/lib/jquery-1.11.3.min.js"></script>
