Adjust paths for iPad

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>${name}</h1>
         <h3>${latin}</h3>
         <p>${body}</p>
-        <button class="back-to-start">Back to Start <img src="/assets/images/icon-arrow-white.svg" alt="arrow"></button>
+        <button class="back-to-start">Back to Start <img src="./assets/images/icon-arrow-white.svg" alt="arrow"></button>
     </script>
 
     <script id="option-template" type="text/x-jQuery-tmpl">
@@ -65,12 +65,12 @@
             </g>
             </svg>
         </div>
-        <div class="logo"><img src="/assets/images/logo.svg" alt="logo"></div>
+        <div class="logo"><img src="./assets/images/logo.svg" alt="logo"></div>
     </div>
     <div id="content">
         <div id="introduction" class="fade in">
             <p>You'll be presented with a series of statements to find out which river organism is most like you. In each pair, choose the statement that best describes you and follow the path until your a matched with a profile of your organism.</p>
-            <button class="start-quiz">Take the Quiz <img src="/assets/images/icon-arrow-blue.svg" alt="arrow"></button>
+            <button class="start-quiz">Take the Quiz <img src="./assets/images/icon-arrow-blue.svg" alt="arrow"></button>
         </div>
         <div id="questions"></div>
         <div id="calculating" class="fade">
