readded some changes after resolving merge conflict

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h2>Your Match Made in the River</h2>
         <h1>${name}</h1>
         <h3>${latin}</h3>
-        <p>${body}</p>
+        <p>${exclamation} <span>${latin},</span> ${body}</p>
         <button class="back-to-start">Back to Start <img src="./assets/images/icon-arrow-white.svg" alt="arrow"></button>
     </script>
 
@@ -65,7 +65,7 @@
             </g>
             </svg>
         </div>
-        <div class="logo"><img src="./assets/images/logo.svg" alt="logo"></div>
+        <div class="logo"><img src="./assets/images/logo.svg" alt="logo" id="logo-image"></div>
     </div>
     <div id="content">
         <div id="introduction" class="fade in">
