--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
 	<meta http-equiv="x-ua-compatible" content="IE=edge" />
 
     <link href="./dist/css/main.css" rel="stylesheet" />
+
+    <!-- GOOGLE ANALYTICS -->
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-86705712-3', 'auto');
+    ga('send', 'pageview');
+
+    function sendGAEvent(screen) {
+        ga('set', 'page', screen);
+        ga('send', 'pageview');
+    }
+
+    </script>
+
 </head>
 <body>
     <script id="result-template" type="text/x-jQuery-tmpl">
@@ -25,7 +43,7 @@
 
     <script id="option-template" type="text/x-jQuery-tmpl">
         <li
-        ><button class="answer-btn"  {{if id}} data-next="${id}" {{/if}}
+        ><button class="answer-btn no-flick"  {{if id}} data-next="${id}" {{/if}}
             {{if resultId}} data-result="${resultId}" {{/if}}>${answer}</button></li>
     </script>
 
@@ -47,7 +65,7 @@
     <script src="./js/app.js"></script>
     
     <div id="gui">
-        <div class="home-button fade">
+        <div class="home-button fade no-flick">
             <svg version="1.1"
              xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
              x="0px" y="0px" width="49.1px" height="49.1px" viewBox="0 0 49.1 49.1" enable-background="new 0 0 49.1 49.1"
@@ -64,6 +82,7 @@
                 </g>
             </g>
             </svg>
+
         </div>
         <div class="logo"><img src="./assets/images/logo.svg" alt="logo" id="logo-image"></div>
     </div>
@@ -74,6 +93,7 @@
         </div>
         <div id="questions"></div>
         <div id="calculating" class="fade">
+            <img src="./assets/images/PQ-bubbles_v03.gif" alt="loading" title="loading"> 
             <h2>Calculating Your River Character</h2>
         </div>
         <div id="results" class="fade"></div>
