--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <script src="./js/app.js"></script>
     
     <div id="gui">
-        <div class="home-button fade no-flick">
+        <button class="home-button fade no-flick">
             <svg version="1.1"
              xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
              x="0px" y="0px" width="49.1px" height="49.1px" viewBox="0 0 49.1 49.1" enable-background="new 0 0 49.1 49.1"
@@ -83,7 +83,7 @@
             </g>
             </svg>
 
-        </div>
+        </button>
         <div class="logo"><img src="./assets/images/logo.svg" alt="logo" id="logo-image"></div>
     </div>
     <div id="content">
