--- a/assets/animations/14.html
+++ b/assets/animations/14.html
@@ -14,7 +14,7 @@
 <title>PaintedTurtle-PQ</title>
 <!-- write your code here -->
 <script src="js/lib/createjs-2015.11.26.min.js"></script>
-<script src="./assets/animation/14.js"></script>
+<script src="./assets/animations/14.js"></script>
 <script>
 var canvas, stage, exportRoot;
 function animationInit() {
