--- a/assets/animations/8.html
+++ b/assets/animations/8.html
@@ -13,7 +13,7 @@
 <meta name="authoring-tool" content="Adobe_Animate_CC">
 <title>Diatoms-PQ</title>
 <!-- write your code here -->
-<script src="js/libs/createjs-2015.11.26.min.js"></script>
+<script src="js/lib/createjs-2015.11.26.min.js"></script>
 <script src="./assets/animations/8.js"></script>
 <script>
 var canvas, stage, exportRoot;
