--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </script>
 
     <style>
-        #bubbles { display: block; position: absolute; z-index: 19; width: 100px; height: 100px; pointer-events: none; }
-        .bubble { width: 30px; height: 30px; background: rgba(250, 250, 250, 0.25); border-radius: 150px; position: absolute; -webkit-animation: float 0.5s ease-in; -webkit-animation-fill-mode: forwards; }
+        #clickBubbles{ display: block; position: absolute; z-index: 19; width: 100px; height: 100px; pointer-events: none; }
+        #clickBubbles > .bubble { width: 30px; height: 30px; background: rgba(250, 250, 250, 0.25); border-radius: 150px; position: absolute; -webkit-animation: float 0.5s ease-in; -webkit-animation-fill-mode: forwards; }
         @keyframes float {
             0% { transform: translateY(0); opacity: 1; }
             100% { transform: translateY(-200px); opacity: 0; }
@@ -73,9 +73,9 @@
     <script src="./js/app.js"></script>
 
     <script>
-        window.onclick = blowBubbles;
+       window.onclick = blowBubbles;
         function blowBubbles(evt) {
-            var bubbleContainer = document.getElementById('bubbles');
+            var bubbleContainer = document.getElementById('clickBubbles');
             var x = evt.pageX;
             var y = evt.pageY;
             var number = Math.floor((Math.random() * 6) + 2);
@@ -132,34 +132,8 @@
         <div id="results" class="fade"></div>
     </div>
     <div id="animation"></div>
-    <div id="bubbles"></div>
+    <div id="clickBubbles"></div>
     <div id="water" data-water-level="0">
-        <div class="sunholder">
-        <div class="sun"></div>
-        <div class="raybase ray1" data-raybase-position="0"><div class="ray"></div></div>
-        <div class="raybase ray2" data-raybase-position="0"><div class="ray"></div></div>
-        <div class="raybase ray3" data-raybase-position="0"><div class="ray"></div></div>
-        <div class="raybase ray4" data-raybase-position="0"><div class="ray"></div></div>
-        <div class="raybase ray5" data-raybase-position="0"><div class="ray"></div></div>
-        <div class="raybase ray6" data-raybase-position="0"><div class="ray"></div></div>
-        <div class="raybase ray7" data-raybase-position="0"><div class="ray"></div></div>
-        <div class="raybase ray8" data-raybase-position="0"><div class="ray"></div></div>
-        <div class="raybase ray9" data-raybase-position="0"><div class="ray"></div></div>
-        <div class="raybase ray10" data-raybase-position="0"><div class="ray"></div></div>
-        <div class="raybase ray11" data-raybase-position="0"><div class="ray"></div></div>
-        <div class="raybase ray12" data-raybase-position="0"><div class="ray"></div></div>
-        <div class="raybase ray13" data-raybase-position="0"><div class="ray"></div></div>
-        <div class="raybase ray14" data-raybase-position="0"><div class="ray"></div></div>
-        <div class="raybase ray15" data-raybase-position="0"><div class="ray"></div></div>
-        <div class="raybase ray16" data-raybase-position="0"><div class="ray"></div></div>
-        <div class="raybase ray17" data-raybase-position="0"><div class="ray"></div></div>
-        <div class="raybase ray18" data-raybase-position="0"><div class="ray"></div></div>
-        <div class="raybase ray19" data-raybase-position="0"><div class="ray"></div></div>
-        <div class="raybase ray20" data-raybase-position="0"><div class="ray"></div></div>
-        <div class="raybase ray21" data-raybase-position="0"><div class="ray"></div></div>
-        <div class="raybase ray23" data-raybase-position="0"><div class="ray"></div></div>
-        <div class="raybase ray24" data-raybase-position="0"><div class="ray"></div></div>
-        </div>
          <div id="bubbles" data-bubble-height="0">
             <div class="bubble x1"></div>
             <div class="bubble x2"></div>
